solve some exercises

--- a/03. Javascript Fundamentals/03. Build a Blackjack game/13. Make the start button work/index.css
+++ b/03. Javascript Fundamentals/03. Build a Blackjack game/13. Make the start button work/index.css
@@ -23,5 +23,11 @@ background - goldenrod
  */
  
 button {
-
+    color: #016f32;
+    background-color: goldenrod;
+    width: 150px;
+    font-weight: bold;
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
 }
